stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_Capacity':
CircularBuffer.c:61:23: error: expected ')' before 'self'
   61 |     return sizeof(int(self->values));
      |                       ^~~~
      |                       )
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
